--- a/index.html
+++ b/index.html
@@ -127,10 +127,12 @@
                     <div class="buscador_vuelos_form">  
                         <div class="contenedor_input">
                             <div class="input">
-                                <input class="input_buscador" type="text" required placeholder="Enter where you are traveling">
+                                <input class="input_buscador" id="buscador_home" type="text" required placeholder="Enter where you are traveling">
                                 <svg width="18" height="24" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M8 16C8 16 14 10.3137 14 6C14 2.68629 11.3137 0 8 0C4.68629 0 2 2.68629 2 6C2 10.3137 8 16 8 16ZM8 8C6.34315 8 6 7.65685 6 6C6 4.34315 6.34315 4 8 4C9.65685 4 10 4.34315 10 6C10 7.65685 9.65685 8 8 8Z" fill="#003B95"/>
                                 </svg>
+                            </div>
+                            <div class="resultados_busqueda" id="resultados_busqueda">   
                             </div>
                         </div>
                         <div class="contenedor_input_vuelo">  
@@ -180,6 +182,11 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="btn_l">
+                        <h2 class="btn_l_titulo">
+                            Search Now
+                        </h2>
                     </div>
                 </div>
                 <!-- <div class="contenedor_input center">
